# neuroslope-roguelike

./: .gitignore  README.md  alembic.ini  database.sqlite  effects.md  index.html  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ac4d343670a_add_games.py  7db227d5c415_initial_migration.py  f6fb1d707f67_add_characters.py
app/: img_gen.py  llm_gen.py
app/api/: dependencies.py  main.py
app/api/endpoints/: auth.py  game.py  lobby.py
app/crud/: character.py  game.py  user.py
app/db/: __init__.py  models.py  session.py
app/db/models/: __init__.py  character.py  game.py  user.py
app/schemas/: lobby.py  user.py
src/: cardArt.js  card_art_catalog.py  effectEngine.js  fx.js  gen_image.py  levelArt.js  level_art_catalog.py  main.js  sfx.js  spireApp.js  styles.css
src/data/: cards.js  relics.js
