[tool.poetry]
name = "neuroslope-roguelike"
version = "0.1.0"
description = ""
authors = ["Вячеслав Чертан <slavakemdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
