[tool.poetry]
name = "neuroslope-roguelike"
version = "0.1.0"
description = ""
authors = ["Вячеслав Чертан <slavakemdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
aiosqlite = "^0.22.1"
uvicorn = "^0.41.0"
greenlet = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
